Add copyright notices and legal documentation
- Add LICENSE.md with comprehensive copyright and usage terms
- Add LEGAL.md with copyright, trademark, and IP claims
- Update README.md with copyright attribution and legal references
- Add copyright headers to all main source files:
  * Backend: main.py, config.py, database.py, models.py, security.py
  * Backend services: chatbot_service.py, asteroid_service.py
  * Frontend: App.tsx, main.tsx, ChatBot.tsx
  * Docker: docker-compose.yml, Dockerfiles
  * Kubernetes: deployment.yaml, network-policy.yaml
  * Helm: Chart.yaml
- Add GitHub repository and creator attribution
- Specify 'Made with love by Rohit' trademark claim

Copyright  2026 Rohit. All rights reserved.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,3 +1,8 @@
+# Cosmic Watch - Backend Docker Image
+# Copyright © 2026 Rohit. Made with love by Rohit.
+# All rights reserved.
+# Repository: https://github.com/rohitb6/Cosmic_Watch
+
 # Backend Dockerfile
 FROM python:3.10-slim
 
