--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,3 +1,8 @@
+# Cosmic Watch - Frontend Docker Image
+# Copyright © 2026 Rohit. Made with love by Rohit.
+# All rights reserved.
+# Repository: https://github.com/rohitb6/Cosmic_Watch
+
 # Frontend Dockerfile
 FROM node:18-alpine AS builder
 
