--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,3 +1,8 @@
+# Cosmic Watch - Kubernetes Deployment Manifests
+# Copyright © 2026 Rohit. Made with love by Rohit.
+# All rights reserved.
+# Repository: https://github.com/rohitb6/Cosmic_Watch
+
 apiVersion: v1
 kind: Namespace
 metadata:
