--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,23 +10,23 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
+    "autoprefixer": "^10.4.16",
+    "axios": "^1.6.2",
+    "clsx": "^2.0.0",
+    "dayjs": "^1.11.10",
+    "framer-motion": "^10.16.4",
+    "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "axios": "^1.6.2",
-    "@reduxjs/toolkit": "^1.9.7",
     "react-redux": "^8.1.3",
-    "tailwindcss": "^3.4.1",
-    "postcss": "^8.4.32",
-    "autoprefixer": "^10.4.16",
-    "zustand": "^4.4.7",
+    "react-router-dom": "^6.20.0",
     "recharts": "^2.10.3",
-    "three": "^0.157.0",
     "socket.io-client": "^4.7.2",
-    "framer-motion": "^10.16.4",
-    "dayjs": "^1.11.10",
-    "clsx": "^2.0.0",
-    "zod": "^3.22.4"
+    "tailwindcss": "^3.4.1",
+    "three": "^0.157.0",
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
@@ -34,11 +34,11 @@
     "@types/three": "^0.157.0",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.54.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "typescript": "^5.3.3",
-    "vite": "^5.0.2",
-    "@vitejs/plugin-react": "^4.2.1"
+    "vite": "^5.0.2"
   }
 }
